deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medibrowserr
  labels:
    app.kubernetes.io/name: medibrowserr
spec:
  selector:
    app.kubernetes.io/name: medibrowserr
  ports:
    - name: http
      port: 80
      targetPort: http
